--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "watchify": "^3.6.1"
   },
   "dependencies": {
+    "aframe": "^0.3.2",
+    "aframe-animation-component": "^3.0.4",
+    "aframe-bmfont-text-component": "^0.1.4",
+    "aframe-react": "^3.2.0",
+    "aframe-text-component": "^0.3.0",
+    "babel-polyfill": "^6.16.0",
     "material-ui": "^0.15.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
