--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "aframe-react": "^3.2.0",
     "aframe-text-component": "^0.3.0",
     "babel-polyfill": "^6.16.0",
+    "express": "^4.14.0",
     "material-ui": "^0.15.0",
+    "mongoose": "^4.6.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-tap-event-plugin": "^1.0.0"
