--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "aframe-react": "^3.2.0",
     "aframe-text-component": "^0.3.0",
     "babel-polyfill": "^6.16.0",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-json": "^1.0.0",
+    "jquery": "^3.1.1",
     "material-ui": "^0.15.0",
     "mongoose": "^4.6.4",
     "react": "^15.0.1",
