Refactor to have gulp initialize nodemon

--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "aframe-text-component": "^0.3.0",
     "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-json": "^1.0.0",
+    "gulp-nodemon": "^2.2.1",
     "jquery": "^3.1.1",
     "material-ui": "^0.15.0",
     "mongoose": "^4.6.4",
