--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "aframe-text-component": "^0.3.0",
     "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-json": "^1.0.0",
